[Chore] Migrate module libcommon-collection to libcommon-util